# copter_sim

./: .gitignore
copter_controller/: CMakeLists.txt  package.xml
copter_controller/launch/: controller.launch.py  start_copter.launch.py
copter_controller/mission/: mission.txt
copter_controller/scripts/: complexTool.py  complex_data.py  controller.py  imu_node.py  kalmanFilter.py  mission_realizer.py
copter_model/: CMakeLists.txt  package.xml
copter_model/config/: aion_config.json  ins_config.json  laser_config.json  start_config.json
copter_model/launch/: copter_plugins.launch.py  copter_world.launch.py
copter_model/models/copter_robot/: model.config  model.sdf
copter_model/scripts/: aion_plugin.py  gps_plugin.py  imu_plugin.py  ins_imu_plugin.py  ins_nav_plugin.py  laser_dist_plugin.py  spawn_copter.py
copter_model/src/: copter_plugin.cpp
copter_model/worlds/copter_worlds/: copter.model
